fix: GET /api/v1/genres/:id のレスポンスキーを address_and_date_spots から date_spots に変更
